# springboot-bazel-demo

./: README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-springboot-bazel-demo  bazel-testlogs  maven_install.json
bazel-microservice-1/: .gitignore  BUILD.bazel
bazel-microservice-1/src/main/java/com/kelsonthony/bazelmicroservice1/: BazelMicroservice1Application.java
bazel-microservice-1/src/test/java/com/kelsonthony/bazelmicroservice1/: BazelMicroservice1ApplicationTests.java
bazel-microservice-2/: BUILD.bazel
bazel-microservice-2/src/main/java/com/kelsonthony/bazelmicroservice2/: BazelMicroservice2Application.java
bazel-microservice-2/src/test/java/com/kelsonthony/bazelmicroservice2/: BazelMicroservice2ApplicationTests.java
