java_binary (
    name = "bazel-microservice-1",
    srcs = glob(["src/main/java/com/kelsonthony/bazelmicroservice1/*.java"]),
    main_class = "com.kelsonthony.bazelmicroservice1.BazelMicroservice1Application",
    deps = [
        
        ],
    runtime_deps = [
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_boot_spring_boot_starter_test",
        ]
)
